# brandplus-api

./: .env  .env.development  .env.override  .env.secrets  .env.test  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
mongodb/: Dockerfile  init-mongo.sh
src/: Dockerfile  docker-entrypoint.sh  pyproject.toml
src/app/: deps.py  exceptions.py  indexes.py  logger.py  main.py  seed.py  settings.py  tasks.py  version.py
src/app/domain/: __init__.py  collection_names.py
src/app/domain/mongodb/: __init__.py  authentication.py  organization.py  repository.py  user_organization.py
src/app/domain/repositories/: __init__.py  authentication.py  organization.py  repository.py  user_organization.py
src/app/models/: __init__.py  organization.py  revoked_token.py  user.py  user_organization.py  versioned.py
src/app/utils/: auth_utils.py  email_utils.py  token_utils.py
src/app/views/: __init__.py  auth.py  home.py  schemas.py
src/app/views/models/: __init__.py
src/brandplus/: Dockerfile  pyproject.toml
tests/: conftest.py  fakes.py  test_auth.py  test_authentication.py  test_home.py
