[tool.poetry]
name = "brandplus-api"
version = "0.1.0"
description = ""
authors = ["afeef <janjua.afeef@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
