[tool.poetry]
name = "brandplus-api"
version = "0.1.0"
description = ""
authors = ["afeef <janjua.afeef@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pydantic = "^2.0.3"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
